apps/transmission/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: transmission
 namespace: media
spec:
 hostnames:
 - transmission.tomasmerino.com
 parentRefs:
 - name: homelab-gateway
   namespace: networking
 rules:
  - backendRefs:
    - name: transmission
      port: 9091
